# gWhisper

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  LocalDescDb1.proto  MAINTAINERS.md  PROJECT_SCOPE.md  README.md  build.sh  cert-key-gen.sh  client_key.pem  complete.bash  complete.fish  config  file  searchFile.sh  testfile.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: c-cpp.yml  cmake.yml
cert-key-pairs/: ca.crt  ca.key  ca.srl  clientCert.crt  clientPrivateKey.key  client_crt.pem  client_csr.pem  client_key.pem  serverCert.crt  serverPrivateKey.key  server_crt.pem  server_csr.pem  server_key.pem
cert-key-pairs_2/: ca.crt  ca.key  ca.srl  cert-key-gen-2.sh  client_crt.pem  client_csr.pem  client_key.pem  server_crt.pem  server_csr.pem  server_key.pem
cmake/: filesystem.cmake  gRPC.cmake
doc/: CONTRIBUTING.md  Developer.md  FAQ.md  Untitled Document 1  Usage.txt  example.cast
docker/: Dockerfile
src/: CMakeLists.txt  generateVersionDefine.sh
src/config/: CMakeLists.txt  Config.cpp  Config.hpp
src/gWhisperConfig/: CMakeLists.txt  GWhisperConfig.cpp  GWhisperConfig.hpp  createInitConfig.py  testfile.json
src/gWhisperSetting/: CMakeLists.txt  GWhisperSetting.cpp  GWhisperSetting.hpp
src/gwhisper/: CMakeLists.txt  generateRawStringFile.sh  gwhisper.cpp
src/libArgParse/: Alternation.hpp  ArgParse.cpp  ArgParse.hpp  ArgParseUtils.hpp  CMakeLists.txt  Concatenation.hpp  EscapedString.hpp  FixedString.hpp  Grammar.hpp  GrammarElement.hpp  GrammarFactory.hpp  GrammarInjector.hpp  Optional.hpp  ParsedDocument.hpp  ParsedElement.hpp  RegEx.hpp  Repetition.hpp  WhiteSpace.hpp
src/libArgParse/libArgParse/: Alternation.hpp  ArgParse.hpp  ArgParseUtils.hpp  EscapedString.hpp  FixedString.hpp  GrammarElement.hpp  GrammarFactory.hpp  GrammarInjector.hpp  ParsedDocument.hpp
src/libCli/: CMakeLists.txt  Call.cpp  Call.hpp  Completion.cpp  Completion.hpp  ConnectionManager.cpp  ConnectionManager.hpp  DescDBProxy.cpp  GrammarConstruction.cpp  GrammarConstruction.hpp  MessageFormatterCustom.cpp  MessageFormatterJson.cpp  MessageFormatterOptimizedForHumans.cpp  MessageParserCli.cpp  MessageParserJson.cpp  MessageParsing.cpp  MessageParsing.hpp  MessageParsingCli.cpp  MessageParsingJson.cpp  OutputFormatting.cpp  OutputFormatting.hpp  OutputFormattingCustom.cpp  OutputFormattingJson.cpp  OutputFormattingOptimizedForHumans.cpp  cliUtils.cpp  cliUtils.hpp  file
src/libCli/libCli/: Call.hpp  ConnectionManager.hpp  MessageFormatter.hpp  MessageParser.hpp  MessageParsing.hpp  OutputFormatting.hpp  cliUtils.hpp
src/libGwhisperSettings/: CMakeLists.txt  GwhisperSettings.cpp  GwhisperSettings.hpp
src/libLocalDescriptorCache/: CMakeLists.txt  DescDbProxy.cpp  DescDbProxy.hpp  LocalDescDb.pb.cc  LocalDescDb.pb.h  LocalDescDb.proto  OldDescDbProxy.cpp
src/libTrace/: CMakeLists.txt  Tracer.cpp  Tracer.hpp
src/protoDoc/: CMakeLists.txt  protoDoc.proto
src/utils/: CMakeLists.txt  gwhisperUtils.cpp  gwhisperUtils.hpp
src/version/: CMakeLists.txt  generateVersionDefine.sh
tests/: CMakeLists.txt  invalidJsonConfig.json
tests/functionTests/: CMakeLists.txt  cacheFunctionTests.txt  completionTests.txt  completionTests_fish.txt  configTest.txt  configTests.txt  rpcExecutionTests.txt  rpcTimeoutFunctionTest.txt  rpcTimeoutFunctionTests.txt  rpcTimeoutFuntionTest.txt  runCompletionTests.sh  runFunctionTest.py  runFunctionTest.sh  sslFunctionTests.txt  testScript.py
tests/functionTests/resources/: duplicateEverything1d.json  duplicateEverything1d_malformed.json  invalidJsonConfig.json  testDefaultConfig.json  validConfig.json
tests/testServer/: CMakeLists.txt  ServiceComplexTypeRpcs.cpp  ServiceComplexTypeRpcs.hpp  ServiceNestedTypeRpcs.cpp  ServiceNestedTypeRpcs.hpp  ServiceScalarTypeRpcs.cpp  ServiceScalarTypeRpcs.hpp  ServiceStatusHandling.cpp  ServiceStatusHandling.hpp  ServiceStreamingRpcs.cpp  ServiceStreamingRpcs.hpp  cert-key-gen.sh  examples.proto  services.proto  testServer.cpp
tests/testServer/certificate/: ca.crt  ca.key  client.crt  client.csr  client.key  gen-certs.sh  server.crt  server.csr  server.key
tests/unitTests/: AlternationTest.cpp  CMakeLists.txt  CacheTest.cpp  ConcatenationTest.cpp  FixedStringTest.cpp  GrammarComboTests.cpp  GrammarInjectorTest.cpp  OptionalTest.cpp  ParsedDocumentTest.cpp  RepetitionTest.cpp  testmain.cpp
travis/: cppcheck_suppressions.txt  installGrpc.sh  runFunctionTests.sh  runUnitTests.sh
